# TiebaGPT

./: .gitignore  LICENSE  README.md  core_logic.py  gui.py  prompts.default.json  pyproject.toml  requirements.txt
